#565830, by bengtan, Fix Postgres handling of hour '0'.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #565830, by bengtan, Fix Postgres handling of hour '0'.
 - #408770, by vkareh, Make sure dates with access control retain values during processing.
 - #574876, by stella, Fix odd logic when forcing views dates in date elements.
 - #385688, by noahb, a fix for using relationships with date filters and arguments. Thanks!
