--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #406976 by dopry, Check both the field name and type name to get the right label for shared fields.
 - #599744 by anarcat, don't rename table to one that already exists.
 - #599484 by Gribnif, avoid infinite date repeat in PHP4.
 - #529734 by raintonr, reduce number of requires for PHP4.
