--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #772180 by recrit and dww, make sure date descriptions always use valid dates for format examples.
 - #642018 by slip and KarenS, make sure to eliminate spaces before AM/PM in date popup timepicker.
 - #582982 by yahn, make sure date_all_day gets the most significant date element.
 - #785708 by bdurbin and locomo, update jquery timeentry to latest version.
