--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -9,6 +9,7 @@ Version 6.2.5
 
 NOTE: The included copy of the jQuery UI datepicker in the Date Popups module has been removed. It is now necessary to install the jQuery UI module (http://drupal.org/project/jquery_ui) for the Date Popups datepicker to work!
 
+- #436490 Add support for the jQuery UI 1.7 datepicker.
 - #802046 by t3hk0d3, fix date parsing to better handle unicode characters.
 - #475926 by hawleyal, clean html out of ical export.
 - #675352 by sdague, clean up ical escape text.
