--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,11 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+Version 6.2.6
+=============
+
+- Revert #802046. Unicode support change for date parsing causes serious errors.
+
 Version 6.2.5
 =============
 
