--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #784854 by akeemw, fix broken date repeat handling of negative by-day computations.
 - Add functions to get a granularity precision from a granularity array or an array from a precision.
 - #760284 by skwashd, arithmetric clean up ical rfc compliance.
 - #939152 by amelfe add z-index to datepicker 1.7.
