--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Add more date repeat tests and fix date repeat handling of day of month > 5.
 - #784854 by akeemw, fix broken date repeat handling of negative by-day computations.
 - Add functions to get a granularity precision from a granularity array or an array from a precision.
 - #760284 by skwashd, arithmetric clean up ical rfc compliance.
