--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #447868 Figure out when remembered value needs to used in Date filter.
 - #430746, by Kermit Fix missing datetime type in event migration code in Date Tools.
 - #1011184 Add function to sort granularity array and use it in date_make_date().
 - #1014664 Fix timezone shifts when computing UNTIL date.
