--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #1027752 by B-Prod and dboulet, Fix missing table join on argument summary view.
 - #686394 Fix computation of week when week is used as default value of date argument.
 - #447868 Figure out when remembered value needs to used in Date filter.
 - #430746 by Kermit, Fix missing datetime type in event migration code in Date Tools.
