--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -4,6 +4,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #945982 by tstoeckler, Fix another PHP 5.3 warning.
 - #1027752 by B-Prod and dboulet, Fix missing table join on argument summary view.
 - #686394 Fix computation of week when week is used as default value of date argument.
 - #447868 Figure out when remembered value needs to used in Date filter.
