--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- #745074, by rsevero:  Don't test for valid timezone-adjusted date for dates that don't use time.
 - #1082658: Saving the options as arrays breaks other things. Add a custom export plugin instead.
 - #1082658, Views options need to be declared as arrays or they are not saved in the export in Views 3.
 - #945982 by tstoeckler, Fix another PHP 5.3 warning.
