--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Issue #1087798 by anj, Fix X-WR-CALNAME in VCALENDAR.
 - Issue #1017866 by KarenS and Jason89s, Make sure views argument and filter don't do timezone adjustment for dates that don't have time.
 - Issue #1204988 by paulsheldrake, Remove IE6 code from 1.7 datepicker CSS.
 - Issue #1159404 by mikeryan, Fix incorrect call to parse an rrule in date_repeat_build_dates().
