--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,7 +3,8 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
-- Issue #1130814, Backport all the fixes for Date Repeat Calc so PHP 5.3 will work right and tests will pass.
+- Issue #1300274, Backport all the fixes for date_repeat_build_dates() from D7 so additions will work righ in PHP 5.3.
+- Issue #1130814, Backport all the fixes for Date Repeat Calc from D7 so PHP 5.3 will work right and tests will pass.
 - Issue #1391374 & #1302052 by benjifisher, CRLF line endings cause problems with git apply
 - Issue #1101284 by pfournier, Expand regex for Month names to catch more possible variations.
 - Issue #1086100 by ayalon, Group Multiple Value functionality is broken
