Finally found why tests are failing on d.o. Some of the needed modules aren't getting set up in the test.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,8 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Finally found why tests are failing on d.o. Some of the needed modules aren't getting set up in the test.
+
 Version 6.2.8
 =============
 
