--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Issue #488078 by emmajane: Fixed Broken link.
 - Issue #1017216 by tim.plunkett, arlinsandbulte: Added custom date format without time shows 'all day'.
 - Issue #1407064 by nairb: Fixed undefined function drupal_substr_replace().
 - Issue #1162962 by mikeryan: Fixed E_STRICT notices in date_make_date().
