--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Issue #536832 by aturetta: Fixed Date format types not translated in admin pages.
 - Issue #488078 by emmajane: Fixed Broken link.
 - Issue #1017216 by tim.plunkett, arlinsandbulte: Added custom date format without time shows 'all day'.
 - Issue #1407064 by nairb: Fixed undefined function drupal_substr_replace().
