--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Issue #1360672, Fix limit format code to remove leftover non-ascii text as well as leftover ascii text.
 - Issue #1033856 by joachim: Fixed conflicting messages about jquery UI requirement.
 - Issue #1049992 by jjwhitney: Fixed Failed validation causes values to disappear when using popup widget.
 - Issue #436490 by kong, xjm: Fixed Add support for jQuery update to 1.3.x and jQuery UI 1.7.x.
