--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -3,6 +3,7 @@ Date Module 6.x
 Version 6.2-dev
 =================
 
+- Issue #1223956 by mikeytown2 and hyrcan, Fix undefined index in date_handler_fields().
 - Issue #1517548 by joachim, Fix incorrect documentation for date_default_timezone_name().
 - Issue #884310 by AlexisWilke, Postgres earlier than 8.3 needs different syntax in date update.
 - Issue #606658 by johnmunro and KarenS, Make sure ical import processes multi-day all-day events correctly.
